--- a/acer/.config/polybar/config
+++ b/acer/.config/polybar/config
@@ -57,7 +57,7 @@ font-2 = "Ubuntu Nerd Font:size=8:antialias=false;1"
 
 modules-left = i3 cpu temperature memory filesystem
 modules-center = backlight music mpd pulseaudio
-modules-right = bumblebee redshift xkeyboard wlan battery date
+modules-right = bumblebee redshift xkeyboard wlan eth battery date
 
 tray-position = right
 tray-padding = 3
@@ -80,7 +80,7 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = "læŋɡwıdʒ: "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
@@ -217,41 +217,43 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp2s0
+interface = wlp7s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = ${colors.primary}
 label-connected = %essid%
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
+label-disconnected = 睊
+label-disconnected-foreground = #666
+format-disconnected = <label-disconnected>
+format-disconnected-underline = ${colors.secondary}
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = "直20%: " 
+ramp-signal-1 = "直40%: "
+ramp-signal-2 = "直60%: "
+ramp-signal-3 = "直80%: "
+ramp-signal-4 = "直100%: "
 ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp3s0
+interface = enp8s0
 interval = 3.0
 
+format-connected = <label-connected>
 format-connected-underline = ${colors.primary}
-format-connected-prefix = 
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
-format-disconnected = "disconnected"
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+;format-disconnected = 
+format-disconnected = <label-disconnected>
+format-disconnected-underline = ${colors.secondary}
+label-disconnected = 
+label-disconnected-foreground = #666
 
 [module/date]
 type = internal/date
@@ -263,7 +265,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 
 label = %date% %time%
@@ -380,7 +382,7 @@ animation-charging-framerate = 1000
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-warn-temperature = 60
+warn-temperature = 75
 
 format = <ramp> <label>
 format-underline = ${colors.secondary}
