--- a/acer/.config/polybar/config
+++ b/acer/.config/polybar/config
@@ -157,7 +157,7 @@ label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 ; workspace-icons ws-icon-x = label;icon --yeah--
-ws-icon-0 = 1;
+ws-icon-0 = 1;
 ws-icon-1 = 2;ﱘ
 ws-icon-2 = 3;
 ws-icon-3 = 4;
