--- a/miniacer/.config/i3/config
+++ b/miniacer/.config/i3/config
@@ -24,7 +24,7 @@ exec --no-startup-id udiskie &
 # exec firefox
 # workspace "3"
 # exec i3-sensible-terminal
-exec --no-startup-id i3-msg 'workspace "2"; exec i3-sensible-terminal -e zsh -c "ncmpcpp"; workspace "1"'
+#exec --no-startup-id i3-msg 'workspace "2"; exec i3-sensible-terminal -e zsh -c "ncmpcpp"; workspace "1"'
 # exec i3-msg 'workspace "1"; exec atom'
 exec_always --no-startup-id setxkbmap pl &
 exec --no-startup-id betterlockscreen -l
