--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -31,6 +31,7 @@ exec --no-startup-id betterlockscreen -l
 bindsym Print exec scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+Print exec scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym control+Print exec scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
+bindsym $mod+P exec mpc toggle
 
 
 # Font for window titles. Will also be used by the bar unless a different font
