--- a/acer/.config/polybar/config
+++ b/acer/.config/polybar/config
@@ -72,6 +72,51 @@ wm-restack = i3
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
+[bar/secondary]
+monitor = ${env:MONITOR:HDMI1}
+width = 100%
+height = 30
+;offset-x = 2%
+;offset-y = 1%
+radius = 0.0
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
+
+border-size = 4
+border-color = #00000000
+
+padding-left = 0
+padding-right = 6
+
+module-margin-left = 2
+module-margin-right = 2
+
+font-0 = "Ubuntu Nerd Font:pixelsize=11;1"
+font-1 = "UbuntuCondensed Nerd Font:size=8:antialias=false;1"
+font-2 = "Ubuntu Nerd Font:size=8:antialias=false;1"
+
+modules-left = i3 cpu temperature memory filesystem
+modules-center = music pulseaudio
+modules-right = redshift khal date
+
+tray-position = right
+tray-padding = 3
+tray-detached = false
+;tray-transparent = true
+;tray-background = #0063ff
+
+wm-restack = i3
+
+;override-redirect = true
+
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
@@ -91,6 +136,9 @@ label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
+
+click-left = "/sbin/setxkbmap pl"
+click-right = "/sbin/setxkbmap us"
 
 [module/filesystem]
 type = internal/fs
