--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -26,6 +26,8 @@ bindsym $mod+Print exec scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H
 bindsym control+Print exec scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+P exec mpc toggle
 bindsym $mod+M exec xrandr --addmode HDMI1 1920x1080 && xrandr --output HDMI1 --mode 1920x1080 --right-of eDP1 && sleep 0.4 && exec /home/jazz/.config/polybar/launch.sh &
+bindsym $mod + comma exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -5%; exec pactl set-sink-volume alsa_output.usb-Cmedia_ROCCAT_Juke_6709-00.analog-stereo -5%
+bindsym $mod + period exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +5%; exec pactl set-sink-volume alsa_output.usb-Cmedia_ROCCAT_Juke_6709-00.analog-stereo +5%
 
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -206,7 +208,7 @@ client.unfocused $bg $bg $ia
 client.focused_inactive $bg $bg $tx
 client.urgent	$rd $rd $tx
 
-bindsym $mod+z exec --no-startup-id betterlockscreen -l
+bindsym $mod+z exec --no-startup-id "mpc pause; betterlockscreen -l"
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
