--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -15,7 +15,7 @@ set $alt Mod1
 exec_always --no-startup-id /home/jazz/.config/polybar/launch.sh &
 exec --no-startup-id xinput set-prop 11 280 1 &
 exec --no-startup-id redshift
-exec_always --no-startup-id feh --bg-scale /home/jazz/Pictures/Wallpapers/wallpaper.jpg
+exec_always --no-startup-id /home/jazz/.config/i3/wallpaper.sh # feh for setting background
 exec --no-startup-id udiskie &
 exec --no-startup-id i3-msg 'workspace "2"; exec i3-sensible-terminal -e zsh -c "ncmpcpp"; workspace "1"'
 #exec i3-msg 'workspace "1"; exec atom'
