--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -20,7 +20,7 @@ exec --no-startup-id udiskie &
 exec --no-startup-id i3-msg 'workspace "2"; exec i3-sensible-terminal -e zsh -c "ncmpcpp"; workspace "1"'
 #exec i3-msg 'workspace "1"; exec atom'
 exec_always --no-startup-id setxkbmap pl &
-exec --no-startup-id betterlockscreen -l
+exec --no-startup-id /home/jazz/.config/i3/lockscreen.sh
 bindsym Print exec scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+Print exec scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym control+Print exec scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
@@ -208,7 +208,7 @@ client.unfocused $bg $bg $ia
 client.focused_inactive $bg $bg $tx
 client.urgent	$rd $rd $tx
 
-bindsym $mod+z exec --no-startup-id "mpc pause; betterlockscreen -l"
+bindsym $mod+z exec --no-startup-id "mpc pause; /home/jazz/.config/i3/lockscreen.sh"
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
