--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -17,7 +17,9 @@ exec --no-startup-id xinput set-prop 11 280 1 &
 exec_always --no-startup-id /home/jazz/.config/i3/wallpaper.sh
 exec --no-startup-id redshift
 exec --no-startup-id udiskie &
-exec --no-startup-id i3-msg 'workspace "2"; exec --no-startup-id i3-sensible-terminal -e zsh -c "ncmpcpp"; workspace "1"'
+exec --no-startup-id i3-msg 'workspace "2"'
+exec --no-startup-id i3-sensible-terminal -e zsh -c "ncmpcpp"
+exec --no-startup-id i3-msg 'workspace "1"'
 exec_always --no-startup-id setxkbmap pl &
 exec_always --no-startup-id /home/jazz/.config/i3/lockscreen.sh
 bindsym Print exec --no-startup-id scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
