--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -14,19 +14,16 @@ set $alt Mod1
 
 exec_always --no-startup-id /home/jazz/.config/polybar/launch.sh &
 exec --no-startup-id xinput set-prop 11 280 1 &
-exec_always --no-startup-id /home/jazz/.config/i3/wallpaper.sh
 exec --no-startup-id redshift
 exec --no-startup-id udiskie &
-exec --no-startup-id i3-msg 'workspace "2"'
-exec --no-startup-id i3-sensible-terminal -e zsh -c "ncmpcpp"
-exec --no-startup-id i3-msg 'workspace "1"'
 exec_always --no-startup-id setxkbmap pl &
-exec --no-startup-id /home/jazz/.config/i3/lockscreen.sh
+exec --no-startup-id /home/jazz/.config/i3/startup.sh
+exec --no-startup-id i3-msg 'workspace "2"; exec i3-sensible-terminal -e zsh -c "ncmpcpp"; workspace "1"' 
 bindsym Print exec --no-startup-id scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+Print exec --no-startup-id scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym control+Print exec --no-startup-id scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+P exec --no-startup-id mpc toggle
-bindsym $mod+M exec --no-startup-id xrandr --addmode HDMI1 1920x1080 && xrandr --output HDMI1 --mode 1920x1080 --right-of eDP1 && sleep 0.4 && exec --no-startup-id /home/jazz/.config/polybar/launch.sh &
+bindsym $mod+M exec --no-startup-id xrandr --addmode HDMI1 1920x1080 && xrandr --output HDMI1 --mode 1920x1080 --right-of eDP1 && sleep 0.6 && exec --no-startup-id /home/jazz/.config/polybar/launch.sh &
 bindsym $mod + comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -5%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Cmedia_ROCCAT_Juke_6709-00.analog-stereo -5%
 bindsym $mod + period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +5%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Cmedia_ROCCAT_Juke_6709-00.analog-stereo +5%
 
