Removed mouse accelaration

--- a/acer/etc/X11/xorg.conf.d/70-libinput.conf
+++ b/acer/etc/X11/xorg.conf.d/70-libinput.conf
@@ -6,3 +6,19 @@ Section "InputClass"
   Option "TappingDrag" "True"
   Driver "libinput"
 EndSection
+
+Section "InputClass"
+  Identifier "remove acceleration"
+  MatchDriver "libinput"
+  MatchProduct "Razer Basilisk"
+  Option "AccelSpeed" "-1.0"
+EndSection
+
+Section "InputClass"
+  Identifier "My Mouse"
+  MatchIsPointer "yes"
+  Option "AccelerationNumerator" "1"
+  Option "AccelerationDenominator" "1"
+  Option "AccelerationThreshold" "0"
+EndSection
+
