--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -12,7 +12,9 @@
 set $mod Mod4
 set $alt Mod1
 
+exec --no-startup-id xrandr --dpi 142
 exec_always --no-startup-id /home/jazz/.config/polybar/launch.sh &
+exec_always --no-startup-id dunst &
 exec --no-startup-id xinput set-prop 11 280 1 &
 exec --no-startup-id redshift
 exec --no-startup-id udiskie &
@@ -24,8 +26,9 @@ bindsym $mod+Print exec --no-startup-id scrot -u '/home/jazz/Pictures/Screenshot
 bindsym control+Print exec --no-startup-id scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+P exec --no-startup-id mpc toggle
 bindsym $mod+M exec --no-startup-id xrandr --addmode HDMI1 1920x1080 && xrandr --output HDMI1 --mode 1920x1080 --right-of eDP1 && sleep 0.6 && exec /home/jazz/.config/polybar/launch.sh &
-bindsym $mod + comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -5%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Cmedia_ROCCAT_Juke_6709-00.analog-stereo -5%
-bindsym $mod + period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +5%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Cmedia_ROCCAT_Juke_6709-00.analog-stereo +5%
+bindsym $mod + comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo -2%
+bindsym $mod + period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo +2%
+bindsym $mod + c exec xclip -i /dev/null
 
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -206,16 +209,16 @@ client.unfocused $bg $bg $ia
 client.focused_inactive $bg $bg $tx
 client.urgent	$rd $rd $tx
 
-bindsym $mod+z exec --no-startup-id "mpc pause; /home/jazz/.config/i3/lockscreen.sh"
+bindsym $mod+z exec --no-startup-id "mpc pause; wallschctl lock"
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
-bindsym $mod+XF86MonBrightnessUp exec xbacklight -inc 1 # increase screen brightness
-bindsym $mod+XF86MonBrightnessDown exec xbacklight -dec 1 # decrease screen brightness
-bindsym XF86TouchpadToggle exec /home/jazz/RiceDotFiles/toggletouchpad.sh # toggle touchpad
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20 # decrease screen brightness
+bindsym $mod+XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 1 # increase screen brightness
+bindsym $mod+XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 1 # decrease screen brightness
+bindsym XF86TouchpadToggle exec --no-startup-id /home/jazz/RiceDotFiles/toggletouchpad.sh # toggle touchpad
+bindsym XF86AudioPlay exec --no-startup-id playerctl play
+bindsym XF86AudioPause exec --no-startup-id playerctl pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
