--- a/acer/.config/polybar/config
+++ b/acer/.config/polybar/config
@@ -1,4 +1,4 @@
-;==========================================================
+;============================================================
 ;
 ;
 ;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
@@ -9,30 +9,46 @@
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
 ;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/jaagr/polybar
-;
-;   The README contains alot of information
-;
-;==========================================================
+;============================================================
+
+
+;========================
+;         _            
+;  __ ___| |___ _ _ ___
+; / _/ _ \ / _ \ '_(_-<
+; \__\___/_\___/_| /__/
+;                     
+;========================
 
 [colors]
-;background = ${xrdb:color0:#222}
 background = #161616
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
+bg-alt-secondary = #272727
+
+border = #111111
+
 foreground = #dfdfdf
 foreground-alt = #ccc
+
 primary = #267fb5
 secondary = #748aa6
+secondary-grey = #747474
 alert = #FF410D
+
+
+;======================
+;  _                 
+; | |__  __ _ _ _ ___
+; | '_ \/ _` | '_(_-<
+; |_.__/\__,_|_| /__/
+;                    
+;======================
 
 [bar/main]
 monitor = ${env:MONITOR:eDP1}
+monitor-exact = true
 width = 100%
 height = 30
-;offset-x = 2%
-;offset-y = 1%
 radius = 0.0
 fixed-center = true
 
@@ -43,7 +59,7 @@ line-size = 3
 line-color = #f00
 
 border-size = 4
-border-color = #00000000
+border-color = ${colors.border}
 
 padding-left = 0
 padding-right = 2
@@ -62,22 +78,26 @@ modules-right = redshift xkeyboard wlan eth battery khal updates date
 tray-position = right
 tray-padding = 3
 tray-detached = false
-;tray-transparent = true
-;tray-background = #0063ff
-
-wm-restack = i3
-
-;override-redirect = true
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
-[bar/main_multihead]
+
+;=========================================
+;            _ _   _ _                _ 
+;  _ __ _  _| | |_(_) |_  ___ __ _ __| |
+; | '  \ || | |  _| | ' \/ -_) _` / _` |
+; |_|_|_\_,_|_|\__|_|_||_\___\__,_\__,_|
+;                                       
+;=========================================
+
+
+[bar/center_multihead]
+
 monitor = ${env:MONITOR:DP2-1}
+monitor-exact = true
 width = 100%
 height = 30
-;offset-x = 2%
-;offset-y = 1%
 radius = 0.0
 fixed-center = true
 
@@ -88,7 +108,7 @@ line-size = 3
 line-color = #f00
 
 border-size = 4
-border-color = #00000000
+border-color = ${colors.border}
 
 padding-left = 0
 padding-right = 2
@@ -99,6 +119,7 @@ module-margin-right = 2
 font-0 = "Ubuntu Nerd Font:pixelsize=11;1"
 font-1 = "UbuntuCondensed Nerd Font:size=8:antialias=false;1"
 font-2 = "Ubuntu Nerd Font:size=8:antialias=false;1"
+font-3 = "Ubuntu Nerd Font:size=16:antialias=true;1"
 
 modules-left = i3
 modules-center = title
@@ -107,22 +128,22 @@ modules-right = mpd pulseaudio paswitch text-padding date
 tray-position = right
 tray-padding = 3
 tray-detached = false
-;tray-transparent = true
-;tray-background = #0063ff
-
-wm-restack = i3
-
-;override-redirect = true
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
+dpi-x = 94
+dpi-y = 94
+
+
+;=================================================================
+
+
 [bar/tall_multihead]
 monitor = ${env:MONITOR:HDMI1}
+monitor-exact = true
 width = 100%
-height = 25
-;offset-x = 2%
-;offset-y = 1%
+height = 30
 radius = 0.0
 fixed-center = true
 
@@ -133,7 +154,7 @@ line-size = 3
 line-color = #f00
 
 border-size = 4
-border-color = #00000000
+border-color = ${colors.border}
 
 padding-left = 0
 padding-right = 3
@@ -141,9 +162,10 @@ padding-right = 3
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = "Ubuntu Nerd Font:pixelsize=10;1"
+font-0 = "Ubuntu Nerd Font:pixelsize=11;1"
 font-1 = "UbuntuCondensed Nerd Font:size=7:antialias=false;1"
 font-2 = "Ubuntu Nerd Font:size=7:antialias=false;1"
+font-3 = "Ubuntu Nerd Font:size=16:antialias=true;1"
 
 modules-left = i3 cpu temperature memory filesystem
 modules-right = mpd pulseaudio text-padding date
@@ -151,22 +173,22 @@ modules-right = mpd pulseaudio text-padding date
 tray-position = right
 tray-padding = 3
 tray-detached = false
-;tray-transparent = true
-;tray-background = #0063ff
-
-wm-restack = i3
-
-;override-redirect = true
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
+dpi-x = 94
+dpi-y = 94
+
+
+;=================================================================
+
+
 [bar/secondary_multihead]
 monitor = ${env:MONITOR:DP2-2}
+monitor-exact = true
 width = 100%
-height = 25
-;offset-x = 2%
-;offset-y = 1%
+height = 30
 radius = 0.0
 fixed-center = true
 
@@ -177,7 +199,7 @@ line-size = 3
 line-color = #f00
 
 border-size = 4
-border-color = #00000000
+border-color = ${colors.border}
 
 padding-left = 0
 padding-right = 3
@@ -185,9 +207,10 @@ padding-right = 3
 module-margin-left = 2
 module-margin-right = 2
 
-font-0 = "Ubuntu Nerd Font:pixelsize=10;1"
+font-0 = "Ubuntu Nerd Font:pixelsize=11;1"
 font-1 = "UbuntuCondensed Nerd Font:size=7:antialias=false;1"
 font-2 = "Ubuntu Nerd Font:size=7:antialias=false;1"
+font-3 = "Ubuntu Nerd Font:size=16:antialias=true;1"
 
 modules-left = i3
 modules-center = music mpd pulseaudio paswitch
@@ -196,15 +219,76 @@ modules-right = redshift xkeyboard wlan eth battery khal updates date
 tray-position = right
 tray-padding = 3
 tray-detached = false
-;tray-transparent = true
-;tray-background = #0063ff
-
-wm-restack = i3
-
-;override-redirect = true
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
+
+dpi-x = 94
+dpi-y = 94
+
+
+;==================================
+;                _      _        
+;  _ __  ___  __| |_  _| |___ ___
+; | '  \/ _ \/ _` | || | / -_|_-<
+; |_|_|_\___/\__,_|\_,_|_\___/__/
+;                                
+;==================================
+
+
+[module/i3]
+
+type = internal/i3
+format = <label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
+
+; Only show workspaces on the same output as the bar
+pin-workspaces = true
+
+; focused = Active workspace on focused monitor
+label-focused = %icon%
+label-focused-background = ${colors.background-alt}
+label-focused-underline = ${colors.primary}
+label-focused-padding = 2
+label-focused-font = 4
+
+; unfocused = Inactive workspace on any monitor
+label-unfocused = %icon%
+label-unfocused-padding = ${self.label-focused-padding}
+label-unfocused-font = ${self.label-focused-font}
+
+; visible = Active workspace on unfocused monitor
+label-visible = %icon%
+label-visible-background = ${colors.bg-alt-secondary}
+label-visible-underline = ${colors.secondary-grey}
+label-visible-padding = ${self.label-focused-padding}
+label-visible-font = ${self.label-focused-font}
+
+; urgent = Workspace with urgency hint set
+label-urgent = %icon%
+label-urgent-background = ${colors.alert}
+label-urgent-padding = ${self.label-focused-padding}
+label-urgent-font = ${self.label-focused-font}
+
+label-mode = 
+label-mode-padding = 2
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
+label-mode-font = ${self.label-focused-font}
+
+; workspace-icons ws-icon-x = label;icon --yeah--
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-default = 
+
 
 [module/title]
 type = internal/xwindow
@@ -218,20 +302,19 @@ label-empty-foreground = #444
 type = internal/xkeyboard
 blacklist-0 = num lock
 
+format = <label-layout> <label-indicator>
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
+label-indicator-on = %icon%
+
 label-layout = %layout%
 label-layout-underline = ${colors.secondary}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
+indicator-icon-0 = caps lock;;בּ
 
-click-left = "/sbin/setxkbmap pl"
-click-right = "/sbin/setxkbmap us"
+label-indicator-padding = 2
 
 [module/filesystem]
 type = internal/fs
@@ -241,72 +324,9 @@ mount-0 = /
 mount-1 = /home/jazz/Data
 
 label-mounted = %{F#267fb5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = #555
+label-unmounted = %{F#267fb5}%mountpoint%%{F-}: not mounted
+label-unmounted-foreground = #444
 
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-padding = 2
-
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
-pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %icon%
-label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
-label-focused-padding = ${module/bspwm.label-focused-padding}
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %icon%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
-
-; visible = Active workspace on unfocused monitor
-label-visible = %icon%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %icon%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
-
-; workspace-icons ws-icon-x = label;icon --yeah--
-ws-icon-0 = 1;
-ws-icon-1 = 2;ﱘ
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-default = 
 
 [module/mpd]
 type = internal/mpd
@@ -373,7 +393,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp7s0
+interface = wlp6s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -396,7 +416,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp8s0
+interface = enp7s0
 interval = 3.0
 
 format-connected = <label-connected>
