--- a/acer/.config/i3/config
+++ b/acer/.config/i3/config
@@ -14,7 +14,9 @@ set $alt Mod1
 
 exec_always --no-startup-id /home/jazz/.config/polybar/launch.sh &
 exec_always --no-startup-id dunst &
-exec --no-startup-id xrandr --dpi 94
+exec --no-startup-id xrandr --output eDP1 --dpi 140 --mode 1920x1080 --output HDMI1 --off --output DP2-1 --mode 1920x1080 --same-as eDP1 --output DP2-2 --off
+exec --no-startup-id xset s off
+exec --no-startup-id xset dpms 0 0 0
 exec --no-startup-id xinput set-prop 11 280 1 &
 exec --no-startup-id redshift
 exec --no-startup-id udiskie &
@@ -25,11 +27,11 @@ exec --no-startup-id i3-msg 'workspace "2"; exec i3-sensible-terminal -e zsh -c 
 bindsym Print exec --no-startup-id scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym $mod+Print exec --no-startup-id scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
 bindsym control+Print exec --no-startup-id scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
-bindsym $mod+P exec --no-startup-id mpc toggle
-bindsym $mod+M exec --no-startup-id /home/jazz/.config/i3/monitor.sh
-bindsym $mod + comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo -2%
-bindsym $mod + period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo +2%
-bindsym $mod + c exec xclip -i /dev/null
+bindsym $mod+p exec --no-startup-id mpc toggle
+bindsym $mod+m exec --no-startup-id /home/jazz/.config/i3/monitor.sh
+bindsym $mod+comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo -2%
+bindsym $mod+period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo +2%
+bindsym $mod+c exec xclip -i /dev/null
 
 
 # Font for window titles. Will also be used by the bar unless a different font
