Updated samba conf

--- a/station/etc/samba/smb.conf
+++ b/station/etc/samba/smb.conf
@@ -228,3 +228,13 @@
   browsable = yes
   public = yes
   writable = yes
+  create mask = 0644
+
+;[Data]
+;  path = /home/jazz/Data
+;  available = yes
+;  valid users = jazz
+;  read only = no
+;  browsable = yes
+;  public = yes
+;  writable = yes
