i3 different shortcuts for navigation, vimrc update

--- a/station/.config/nvim/coc-settings.json
+++ b/station/.config/nvim/coc-settings.json
@@ -1,4 +1,30 @@
 {
   "codeLens.enable": true,
-  "emmet.includeLanguages": {"htmldjango": "html"}
+  "emmet.includeLanguages": {"htmldjango": "html"},
+  "python.linting.flake8Enabled": true,
+  "python.linting.pylintEnabled": false,
+
+  "languageserver": {
+    "ccls": {
+      "command": "ccls",
+      "filetypes": [
+        "c",
+        "cpp",
+        "objc",
+        "objcpp"
+      ],
+      "rootPatterns": [
+        ".ccls",
+        "compile_commands.json",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ],
+      "initializationOptions": {
+        "cache": {
+          "directory": "/tmp/ccls"
+        }
+      }
+    }
+  }
 }
