--- a/station/.config/fontconfig/fonts.conf
+++ b/station/.config/fontconfig/fonts.conf
@@ -28,7 +28,7 @@
       <bool>true</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
+      <const>hintmedium</const>
     </edit>
   </match>
 </fontconfig>
