--- a/station/.config/polybar/config
+++ b/station/.config/polybar/config
@@ -76,7 +76,7 @@ module-margin-left = 2
 module-margin-right = 2
 
 ;font-0 = "NotoSans Nerd Font:pixelsize=11;1"
-font-0 = "Suisse Sign:pixelsize=10:antialias=true:style=Semi Bold;1"
+font-0 = "Suisse Int'l:pixelsize=10:antialias=true:style=Semi Bold;1"
 font-1 = "NotoSans Nerd Font:pixelsize=11:antialias=true;1"
 font-2 = "NotoSans Nerd Font:pixelsize=11:antialias=true;1"
 font-3 = "NotoSans Nerd Font:pixelsize=16:antialias=true;1"
@@ -123,7 +123,7 @@ module-margin-left = 2
 module-margin-right = 2
 
 ;font-0 = "NotoSans Nerd Font:pixelsize=11;1"
-font-0 = "Suisse Sign:pixelsize=10:antialias=true:style=Semi Bold;1"
+font-0 = "Suisse Int'l:pixelsize=10:antialias=true:style=Semi Bold;1"
 font-1 = "NotoSans Nerd Font:pixelsize=11:antialias=true;1"
 font-2 = "NotoSans Nerd Font:pixelsize=11:antialias=true;1"
 font-3 = "NotoSans Nerd Font:pixelsize=16:antialias=true;1"
@@ -165,7 +165,7 @@ module-margin-left = 2
 module-margin-right = 2
 
 ;font-0 = "NotoSans Nerd Font:pixelsize=11;1"
-font-0 = "Suisse Sign:pixelsize=10:antialias=true:style=Semi Bold;1"
+font-0 = "Suisse Int'l:pixelsize=10:antialias=true:style=Semi Bold;1"
 font-1 = "NotoSans Nerd Font:pixelsize=11:antialias=true;1"
 font-2 = "NotoSans Nerd Font:pixelsize=11:antialias=true;1"
 font-3 = "NotoSans Nerd Font:pixelsize=16:antialias=true;1"
@@ -606,8 +606,8 @@ format-muted-foreground = #666
 [module/cloud]
 type = custom/text
 content = ""
-click-left = /home/jazz/cloud/upload_sync_notify.sh
-click-right = /home/jazz/cloud/download_sync_notify.sh
+click-left = /home/jazz/cloud/upload_sync_notify.sh&
+click-right = /home/jazz/cloud/download_sync_notify.sh&
 
 
 [settings]
